crates/aura-core/tests/boundaries/capability_name_invalid_literal.rs
fn main() {
    let _ = aura_core::capability_name!("Chat:Send");
}
